--- a/css/style.css
+++ b/css/style.css
@@ -106,9 +106,9 @@ header {
 }
 
 .section2_image {
-    width: 100%;
+    /* width: 100%; */
     object-fit: cover;
-    margin-right: 100px;
+    /* margin-right: 100px; */
 
 }
 
